[project]
name = "mos4d"
version = "1.0.0"
description = "Receding Moving Object Segmentation in 3D LiDAR Data Using Sparse 4D Convolutions"
readme = "README.md"
authors = [
    { name = "Benedikt Mersch", email = "benedikt.mersch@gmail.com" },
]
license = { file = "LICENSE" }
dependencies = [
    "kiss-icp>=1.2.3",
    "diskcache>=5.3.0",
    "pytorch_lightning>=1.6.4",
]

[project.optional-dependencies]
all = [
    "PyYAML",
    "ouster-sdk>=0.7.1",
    "pyntcloud",
    "trimesh",
    "open3d>=0.13",
]

[project.scripts]
mos4d_pipeline = "mos4d.cli:app"

[project.urls]
Homepage = "https://github.com/PRBonn/4DMOS"

[build-system]
requires = [
    "scikit_build_core","pybind11",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build"
cmake.verbose = false
cmake.minimum-version = "3.16"
cmake.source-dir = "src/mos4d/pybind/"
editable.mode = "redirect"
editable.rebuild = true
editable.verbose = true
sdist.exclude = ["pybind/"]
wheel.install-dir = "mos4d/pybind/"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "100"
